stable fix ui navbar

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
+    "react-native-responsive-grid-system": "^1.0.4",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-web": "~0.13.12",
