--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
     "expo-cli": "^3.28.2",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,7 +29,8 @@
     "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.2",
     "react-navigation-stack": "^2.8.4",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
