--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
@@ -24,11 +24,11 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-responsive-grid-system": "^1.0.4",
-    "react-native-safe-area-context": "3.1.4",
+    "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.2",
-    "react-navigation-stack": "^2.8.4",
+    "react-navigation-stack": "^2.10.1",
     "styled-components": "^5.2.0",
     "styled-system": "^5.1.5"
   },
