--- a/app.json
+++ b/app.json
@@ -10,6 +10,9 @@
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
