--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/roboto": "^0.1.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@use-expo/font": "^2.0.0",
     "expo": "~39.0.2",
-    "expo-cli": "^3.28.2",
+    "expo-cli": "^3.28.5",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
