--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.2",
     "react-navigation-stack": "^2.10.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "styled-system": "^5.1.5"
   },
