--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "styled-system": "^5.1.5"
