--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-facebook": "~9.0.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "formik": "^2.2.5",
     "global": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
