--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "yup": "^0.32.6"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
